<resources>

    <string name="app_name" translatable="false">"WAKker"</string>
    <string name="shared_prefs" translatable="false">"de.waksh.winf114.wakker2.settings"</string>
    <string name="highscore" translatable="false">"de.waksh.winf114.wakker2.highscore"</string>

    <!-- Strings for activity_main -->
    <string name="str_logo_alt">"Game Logo"</string>
    <string name="str_btn_play">"Play Game"</string>
    <string name="str_btn_highscore" translatable="false">"High Score"</string>
    <string name="str_btn_achievements">"Achievements"</string>
    <string name="str_btn_instructions">"Game Instructions"</string>
    <string name="str_btn_settings">"Settings"</string>
    <string name="str_btn_credits" translatable="false">"Credits"</string>
    <string name="str_btn_exit">"Exit"</string>

    <!-- Strings for activity_game -->
    <string name="title_activity_game" translatable="false">"GameActivity"</string>

    <!-- Strings for activity_highscore -->
    <string name="title_activity_highscore" translatable="false">"HighscoreActivity"</string>
    <string name="str_head_highscore" translatable="false">"High Score"</string>

    <!-- Strings for activity_settings -->
    <string name="title_activity_settings" translatable="false">"SettingsActivity"</string>
    <string name="str_head_settings">"Settings"</string>
    <string name="str_opt_playServices">"Use Google Play Games for High Score and Achievements"</string>

    <!-- Strings for activity_instructions -->
    <string name="title_activity_instructions" translatable="false">"InstructionsActivity"</string>
    <string name="str_head_instr">"Game Instructions"</string>
    <string name="str_instr_content" formatted="false">"Gameplay\nTry to reach all five targets (black) to get to the next level.\nBut beware! Don\'t let the cars (brown) get you. Also the snakes (yellow) and the crocodile (dark green) have it in for you.\nThe logs (brown) help you to get over the river and the back of the crocodile (light green) is harmless, too.\nIf you catch the Frog Princess (purple) or reach the target with the flower (pink), you\'ll get extra points.\n\nControls\nThe frog is moved by swipe gestures. If you want to move the frog up, just swipe up anywhere on the screen. The same goes for moving the frog to the left, to the right or down.\n\nHigh Scores\nBy default the High Scores are saved locally on your device.\nIf you want to compete with other players, you can choose to use Google Play Games for High Scores in the Settings.\nFor that you have to give the App access to your Google+ profile.\nWe use the access only for High Scores, no profile information will be read out!"</string>

    <!-- Strings for activity_credits -->
    <string name="title_activity_credits" translatable="false">"CreditsActivity"</string>
    <string name="str_head_credits" translatable="false">"Credits"</string>
    <string name="str_credits_entw" formatted="false">"WAKker was developed by\n\n Matze Findeisen &amp;\n Benjamin Hätsch\n\nas part of the course \'Development and Management of Software Systems - Programming 2\' at Wirtschaftsakademie Schleswig-Holstein in Kiel, Germany.\n\n\nThe following images were used in this App:\nhttp://pixabay.com/de/frosch-tier-froschlurch-gr%C3%BCn-688641\nhttp://pixabay.com/de/krone-gold-k%C3%B6nig-k%C3%B6nigin-gelb-294438\n\n\nCopyright &#169; 2015 Matze Findeisen &amp; Benjamin Hätsch"</string>

    <!-- Strings for Frosch -->
    <string name="str_frosch_blume">"Flower picked!"</string>
    <string name="str_frosch_highscore">"New High Score!"</string>
    <string name="str_frosch_prinzessin">"Princess caught!"</string>
    <string name="str_frosch_score">"Score: "</string>

    <!-- Strings for GameActivity -->
    <string name="str_game_go">"Let\'s go!"</string>
    <string name="str_game_gc" translatable="false">"GCmax|avg: "</string>
    <string name="str_game_rc" translatable="false">"RCmax|avg: "</string>
    <string name="str_game_ms" translatable="false">" (ms)"</string>
    <string name="str_game_time">"Time "</string>
    <string name="str_game_frogs">"Frogs"</string>
    <string name="str_game_score">"Score: "</string>
    <string name="str_game_level" translatable="false">"Level: "</string>

    <!-- Strings for MainActivity -->
    <string name="str_main_firstUse" translatable="false">"firstUse"</string>
    <string name="str_main_playServices" translatable="false">"usePlayServices"</string>
    <string name="str_main_local">"Unable to sign in, using local High Score!"</string>
    <string name="str_main_tryagain">"There was an issue with sign-in, please try again later!"</string>

    <!-- Strings for MainThread -->
    <string name="str_thread_blub" translatable="false">"Blub!"</string>
    <string name="str_thread_target1">"Target reached!"</string>
    <string name="str_thread_target2">"Target already full!"</string>
    <string name="str_thread_squish">"Squished!"</string>
    <string name="str_thread_yummy">"Yummy!"</string>
    <string name="str_thread_snake" translatable="false">"SSSsssZZzzz!"</string>
    <string name="str_thread_bugger">"Don\'t bugger off!"</string>
    <string name="str_thread_slow">"Too slow!"</string>

</resources>
