<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.waksh.de.wakker2.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footerLayout">

        <LinearLayout
            android:id="@+id/ll_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/wakker_logo"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/str_logo_alt"
                android:src="@drawable/wakker_trans" />

            <Button
                android:id="@+id/btn_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:maxWidth="400dp"
                android:minWidth="400dp"
                android:onClick="onclick_play"
                android:text="@string/str_btn_play" />

            <Button
                android:id="@+id/btn_highscore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:maxWidth="400dp"
                android:minWidth="400dp"
                android:onClick="onclick_highscore"
                android:text="@string/str_btn_highscore" />

            <Button
                android:id="@+id/btn_achievements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:maxWidth="400dp"
                android:minWidth="400dp"
                android:onClick="onclick_achievements"
                android:text="@string/str_btn_achievements"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:maxWidth="400dp"
                android:minWidth="400dp"
                android:onClick="onclick_instructions"
                android:text="@string/str_btn_instructions" />

            <Button
                android:id="@+id/btn_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:maxWidth="400dp"
                android:minWidth="400dp"
                android:onClick="onclick_settings"
                android:text="@string/str_btn_settings" />

            <Button
                android:id="@+id/btn_credits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:maxWidth="400dp"
                android:minWidth="400dp"
                android:onClick="onclick_credits"
                android:text="@string/str_btn_credits" />

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:maxWidth="400dp"
                android:minWidth="400dp"
                android:onClick="onclick_exit"
                android:text="@string/str_btn_exit" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/footerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:paddingTop="@dimen/activity_vertical_margin">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id_test">
        </com.google.android.gms.ads.AdView>

    </LinearLayout>

</RelativeLayout>
